Checkbox highlight bug on Mobile Safari

--- a/client/layout/components/_checkbox.scss
+++ b/client/layout/components/_checkbox.scss
@@ -13,6 +13,7 @@
         outline: 0;
         margin: 0;
         padding: 0;
+        background: none;
     }
 
     .svg-icon {
